--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,7 @@
         }
     },
     "minimum-stability": "dev",
-    "require": {}
+    "require": {
+        "qiniu/php-sdk": "^7.0"
+    }
 }
